CHANGELOG

Version 1.1
-------------------------------------------------------------------------------
* Added nor-NO translation
* Fixed bug #16160: Call to undefined function ezi18n()
* Implemented enhancement #016711: Making extension aware of the
  order/priority in which they need to be loaded
* added ini file to silence wrong suggestions to alter oracle db in system
  upgrade check page

Version 1.0
-------------------------------------------------------------------------------
* Removed Update Location button and made location update automatically on
  marker change.
* Added restore button to restore values to value it had on page load.
* Clear overlay markers on find address click and restore click
* Make edit ui more intuitive by rearranging buttons and use button class
* Add current location button to get location from GeoLocation api if available

Version 1.0beta1
-------------------------------------------------------------------------------
* code cleanup
* bigger map in edit view and normal view
* button to grab current location (from bcgmapslocation)
* PHPDoc inline documentation added where applicable
* Address is now stored
* Datatype can now be used as a name pattern component (address)
* Datatype is now searchable (by address)
* Datatype is now sortable (by address)
* Store data in external table to be able to filter on it
* Added Extended attribute filter to fetch list / tree by cordinates and distance
* Added support for sorting by distance when using Extended attribute filter
* Added support for arccosine and pythagorean distance algorithm in distance
  calculation in the Extended attribute filter in addition to bounding box
* added sql file for Oracle databases

Version 0.5
-------------------------------------------------------------------------------
* only compatible with eZ Publish 4

Version 0.4
-------------------------------------------------------------------------------
* Resolved a few warnings and error messages.
