@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<software>
+    <metadata>
+        <name>eZ Google Maps Location</name>
+        <version>1.1.0</version>
+        <copyright>Copyright (C) 2008 Joe Kepley, 2009-2010 eZ Systems AS</copyright>
+        <license>GNU General Public License v2.0</license>
+        <info_url>http://projects.ez.no/ezgmaplocation</info_url>
+    </metadata>
+
+    <dependencies>
+        <requires>
+            <extension name="ezjscore" />
+        </requires>
+    </dependencies>
+</software>
